@@ -1,3 +1,9 @@
+2007-06-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-insert-file-contents): VISIT must be
+	handled after insertion of the local copy.  Reported by Peter
+	Gordon <peter@pg-consultants.com>.
+
 2007-05-28  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.0.56 released.
